...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtfirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_firstname"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLastLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtlastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_lastname"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textdobLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtdob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_dob"
                    android:inputType="date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textphoneLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_phone"
                    android:inputType="phone"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textEmailLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtemailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_emailid"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textcityLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtcityname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_city"
                android:inputType="text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textnationLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtnationname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_nationality"
                android:inputType="text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp" />
...
            android:layout_marginTop="20dp"
            android:text="@string/app_load"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
...
