...
            android:id="@+id/textLastLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtorganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_organization"
                android:inputType="textPersonName|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textRoleLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtrole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_role"
                android:inputType="textPersonName|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtdurafrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_yearfrom"
                    android:inputType="number|datetime"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:typeface="sans" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtdurto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_yearto"
                    android:inputType="number|datetime"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textSize="16sp"
...

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtresponsiblity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_main_responsible"
                android:inputType="textLongMessage|textMultiLine|textImeMultiLine|textNoSuggestions"
                android:maxLines="30"
                android:minLines="4"
...
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_addtech_skill"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
...
