...
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtcourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/app_graduate"
                android:textSize="16sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
...
            android:id="@+id/textLastLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_univerity"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
...
            android:id="@+id/textcityLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_grade"
                android:inputType="text"
                android:textSize="16sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayYop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtyop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_yop"
                android:inputType="number"
                android:textSize="16sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
...



    </LinearLayout>

    <Button
        android:id="@+id/btn_save_edu"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_weight="0.9"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
...
