...
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtcoreskill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_addskills"
                android:inputType="textLongMessage|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textOtherSkilLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txttotalexp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_otheraddskills"
                android:inputType="number|textNoSuggestions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="16sp"
                android:textStyle="normal"
                android:typeface="sans" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayProfSumm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtProfSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_profession_summary"
                android:inputType="textLongMessage|textMultiLine|textImeMultiLine|textNoSuggestions"
                android:maxLines="30"
                android:minLines="4"
...
